--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div id="navbar">
-        <span class="logo">        <a href="index.html">Website</a></span>
+        <span class="logo">        <a href="index.html">PeduliSatwa</a></span>
         <span class= "menu">        <a href="index.html">Home</a>
         <a href="about.html">About</a></span>
 
@@ -14,25 +14,25 @@
 
     <div id="header" class="container">
         <h1>Save Animals</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, perferendis. Quo ratione fuga beatae illum harum nam quod fugit nulla tempore eveniet sapiente ea enim pariatur non, possimus magni qui?</p>
-        <a href="about.html">Go to My Profile</a>
+        <p>Harimau merupakan salah satu dari sekian kucing besar yang habitat nya terancam punah</p>
+        <a href="about.html">About Us</a>
     </div>
 
     <div id="content">
         <div class="about">
-        <h1>About</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas, unde eligendi.</p>
+        <h1>About Us</h1>
+        <p>Kami adalah satu dari sekian orang-orang yang terpanggil untuk kembali melestarikan si kucing besar yang kulit dan taring nya di buru di mana-mana</p>
         </div>
         <div class="body">
 
                 <div class="image">
-                    <img src="assets/image/pinguin.jpg" alt="">
+                    <img src="assets/image/harimau-sumatra.jpg" alt="">
                 </div>
                 <div class="profile">
-                        <h1>Budy Setiawan</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum voluptatem eius dolorem magnam quae porro temporibus, eaque mollitia, non adipisci alias odio explicabo molestiae hic. Praesentium nihil voluptas ex nam.</p>
+                        <h1>Harimau Sumatra</h1>
+                        <p>Harimau sumatra adalah populasi Panthera tigris sondaica[2] yang mendiami pulau Sumatra, Indonesia dan satu-satunya anggota subspesies harimau sunda yang masih bertahan hidup hingga saat ini. Ia termasuk dalam klasifikasi satwa kritis yang terancam punah (critically endangered) dalam daftar merah spesies terancam yang dirilis Lembaga Konservasi Dunia IUCN. Populasi liar diperkirakan antara 400-500 ekor, terutama hidup di Pegunungan Bukit Barisan jama sejarah taman-taman nasional di Sumatra jaman pra-sejarah. </p>
 
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum alias porro ex tempore autem est ea assumenda rerum, id iste, qui animi reprehenderit libero mollitia molestiae deleniti debitis fugit a?</p>
+                        <p>Uji genetik mutakhir telah mengungkapkan tanda-tanda genetik yang unik, yang menandakan bahwa subspesies ini mungkin berkembang menjadi spesies terpisah, bila berhasil lestari.</p>
                  </div>
 
 
