--- a/index.html
+++ b/index.html
@@ -1,48 +1,57 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Home</title>
-</head>
-<body>
-    <div id="navbar">
-        <span class="logo">        <a href="index.html">PeduliSatwa</a></span>
-        <span class= "menu">        <a href="index.html">Home</a>
-        <a href="about.html">About</a></span>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
 
-    </div>
-
-    <div id="header" class="container">
-        <h1>Save Animals</h1>
-        <p>Harimau merupakan salah satu dari sekian kucing besar yang habitat nya terancam punah</p>
-        <a href="about.html">About Us</a>
-    </div>
-
-    <div id="content">
-        <div class="about">
-        <h1>About Us</h1>
-        <p>Kami adalah satu dari sekian orang-orang yang terpanggil untuk kembali melestarikan si kucing besar yang kulit dan taring nya di buru di mana-mana</p>
+    <title>Priana</title>
+  </head>
+  <body>
+    <div class="container">
+      <!-- Header -->
+      <div>
+        <div class="mx-auto max-w-screen-lg px-3 py-6">
+          <div
+            class="flex flex-col gap-y-3 sm:flex-row sm:items-center sm:justify-between"
+          >
+            <a href="/"
+              ><div
+                class="flex items-center bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text text-xl font-bold text-transparent"
+              >
+                <svg
+                  class="mr-1 h-10 w-10 stroke-cyan-600"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M0 0h24v24H0z" stroke="none"></path>
+                  <rect x="3" y="12" width="6" height="8" rx="1"></rect>
+                  <rect x="9" y="8" width="6" height="12" rx="1"></rect>
+                  <rect x="15" y="4" width="6" height="16" rx="1"></rect>
+                  <path d="M4 20h14"></path></svg
+                >Ixartz's Blog
+              </div></a
+            >
+            <nav>
+              <ul class="flex gap-x-3 font-medium text-gray-200">
+                <li class="hover:text-white">
+                  <a href="/posts/" target="_self">Blogs</a>
+                </li>
+                <li class="hover:text-white">
+                  <a href="/" target="_self">GitHub</a>
+                </li>
+                <li class="hover:text-white">
+                  <a href="/" target="_self">Twitter</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
-        <div class="body">
-
-                <div class="image">
-                    <img src="assets/image/harimau-sumatra.jpg" alt="">
-                </div>
-                <div class="profile">
-                        <h1>Harimau Sumatra</h1>
-                        <p>Harimau sumatra adalah populasi Panthera tigris sondaica[2] yang mendiami pulau Sumatra, Indonesia dan satu-satunya anggota subspesies harimau sunda yang masih bertahan hidup hingga saat ini. Ia termasuk dalam klasifikasi satwa kritis yang terancam punah (critically endangered) dalam daftar merah spesies terancam yang dirilis Lembaga Konservasi Dunia IUCN. Populasi liar diperkirakan antara 400-500 ekor, terutama hidup di Pegunungan Bukit Barisan jama sejarah taman-taman nasional di Sumatra jaman pra-sejarah. </p>
-
-                        <p>Uji genetik mutakhir telah mengungkapkan tanda-tanda genetik yang unik, yang menandakan bahwa subspesies ini mungkin berkembang menjadi spesies terpisah, bila berhasil lestari.</p>
-                 </div>
-
-
-        </div>
+      </div>
     </div>
-
-
-    <div id="footer">
-        <p>Supported By:</p>
-
-    </div>
-</body>
+  </body>
 </html>
