--- a/index.html
+++ b/index.html
@@ -1,57 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
 
     <title>Priana</title>
-  </head>
-  <body>
-    <div class="container">
-      <!-- Header -->
-      <div>
-        <div class="mx-auto max-w-screen-lg px-3 py-6">
-          <div
-            class="flex flex-col gap-y-3 sm:flex-row sm:items-center sm:justify-between"
-          >
-            <a href="/"
-              ><div
-                class="flex items-center bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text text-xl font-bold text-transparent"
-              >
-                <svg
-                  class="mr-1 h-10 w-10 stroke-cyan-600"
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                >
-                  <path d="M0 0h24v24H0z" stroke="none"></path>
-                  <rect x="3" y="12" width="6" height="8" rx="1"></rect>
-                  <rect x="9" y="8" width="6" height="12" rx="1"></rect>
-                  <rect x="15" y="4" width="6" height="16" rx="1"></rect>
-                  <path d="M4 20h14"></path></svg
-                >Ixartz's Blog
-              </div></a
-            >
+</head>
+
+<body class="bg-slate-900 text-gray-100">
+    <div class="mx-auto max-w-screen-lg px-3 py-6">
+        <div class="flex flex-col gap-y-3 sm:flex-row sm:items-center sm:justify-between"><a
+                href="/demo/astro-boilerplate">
+                <div
+                    class="flex items-center bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text text-xl font-bold text-transparent">
+                    <svg class="mr-1 h-10 w-10 stroke-cyan-600" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                        fill="none" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M0 0h24v24H0z" stroke="none"></path>
+                        <rect x="3" y="12" width="6" height="8" rx="1"></rect>
+                        <rect x="9" y="8" width="6" height="12" rx="1"></rect>
+                        <rect x="15" y="4" width="6" height="16" rx="1"></rect>
+                        <path d="M4 20h14"></path>
+                    </svg>Priana Saputra
+                </div>
+            </a>
             <nav>
-              <ul class="flex gap-x-3 font-medium text-gray-200">
-                <li class="hover:text-white">
-                  <a href="/posts/" target="_self">Blogs</a>
-                </li>
-                <li class="hover:text-white">
-                  <a href="/" target="_self">GitHub</a>
-                </li>
-                <li class="hover:text-white">
-                  <a href="/" target="_self">Twitter</a>
-                </li>
-              </ul>
+                <ul class="flex gap-x-3 font-medium text-gray-200">
+                    <li class="hover:text-white"><a href="https://github.com/priana13">GitHub</a></li>
+                </ul>
             </nav>
-          </div>
         </div>
-      </div>
     </div>
-  </body>
+
+    <div class="mx-auto max-w-screen-lg px-3 py-6">
+        <div class="flex flex-col items-center md:flex-row md:justify-between md:gap-x-24">
+            <div>
+                <h1 class="text-3xl font-bold">Hi, I'm <span
+                        class="bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text text-transparent">Priana</span>
+                    👋</h1>
+                <p class="mt-6 text-xl">
+
+                    The world of web development gives me interesting challenges and opportunities. I enjoy working on
+                    both creating user-friendly designs and handling the technical parts behind the scenes. Using tools
+                    like Laravel, React, and Tailwind CSS, I focus on different parts of the development process. For
+                    me, every project is a chance to learn and make useful solutions.
+
+                </p>
+
+                <h2 class="text-xl font-bold mt-3">Super Tools:</h2>
+                <div class="mt-3 flex gap-2 text-normal font-semibold">
+
+                    <span class="rounded-md px-2 py-1  bg-red-700 text-orange-100">Laravel</span>
+                    <span class="rounded-md px-2 py-1 bg-lime-400 text-lime-900">Livewire</span>
+                    <span class="rounded-md px-2 py-1 bg-lime-400 text-lime-900">Filament</span>
+                    <span class="rounded-md px-2 py-1 bg-lime-400 text-lime-900">Tailwindcss</span>
+                    <span class="rounded-md px-2 py-1 bg-lime-400 text-lime-900">Bootsrap</span>
+
+                </div>
+
+                <div class="mt-3 flex gap-2 text-normal font-semibold">
+                    <span class="rounded-md px-2 py-1 bg-lime-400 text-lime-900">Inertia + React</span>
+                    <span class="rounded-md px-2 py-1 bg-gray-400 text-gray-900">NextJs</span>
+                    <span class="rounded-md px-2 py-1 bg-gray-400 text-gray-900">Express</span>
+                </div>
+
+                <div class="mt-3 flex gap-2 text-normal font-semibold">
+                    <span class="rounded-md px-2 py-1 bg-lime-400 text-lime-900">MySql</span>
+                    <span class="rounded-md px-2 py-1 bg-lime-400 text-lime-900">Linux Server + Nginx</span>
+                    <span class="rounded-md px-2 py-1 bg-gray-400 text-gray-900">Docker</span>
+                </div>
+
+            </div>
+            <div class="shrink-0">
+                <img class="h-64 w-64" src="assets/img/image1.jpg" alt="Avatar image" loading="lazy">
+            </div>
+        </div>
+    </div>
+    <div class="mx-auto max-w-screen-lg px-3 py-6">
+        <div class="mb-6 text-2xl font-bold">Recent
+            <span class="bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text text-transparent">Projects</span>
+        </div>
+        <div class="flex flex-col gap-6">
+            <div class="flex flex-col items-center gap-x-8 rounded-md bg-slate-800 p-3 md:flex-row">
+                <div class="shrink-0"><a href="/demo/astro-boilerplate"><img class="h-36 w-36 hover:translate-y-1"
+                            src="assets/img/image2.png" alt="Project Web Design" loading="lazy"></a>
+                </div>
+                <div>
+                    <div class="flex flex-col items-center gap-y-2 md:flex-row"><a class="hover:text-cyan-400"
+                            href="/demo/astro-boilerplate">
+                            <div class="text-xl font-semibold">Donation Platform</div>
+                        </a>
+                        <div class="ml-3 flex gap-2">
+                            <div class="rounded-md px-2 py-1 text-xs font-semibold bg-fuchsia-400 text-fuchsia-900">
+                                Laravel
+                            </div>
+                            <div class="rounded-md px-2 py-1 text-xs font-semibold bg-lime-400 text-lime-900">Filament
+                            </div>
+                            <div class="rounded-md px-2 py-1 text-xs font-semibold bg-sky-400 text-sky-900">Tailwind.css
+                            </div>
+                            <div class="rounded-md px-2 py-1 text-xs font-semibold bg-rose-400 text-rose-900">
+                                Inertia-ReactJs
+                            </div>
+                        </div>
+                    </div>
+                    <p class="mt-3 text-gray-400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+                        bibendum. Nunc non posuere consectetur, justo erat semper enim, non
+                        hendrerit dui odio id enim.</p>
+                </div>
+            </div>
+            <div class="flex flex-col items-center gap-x-8 rounded-md bg-slate-800 p-3 md:flex-row">
+                <div class="shrink-0"><a href="/demo/astro-boilerplate"><img class="h-36 w-36 hover:translate-y-1"
+                            src="assets/img/image2.png" alt="Project Fire" loading="lazy"></a></div>
+                <div>
+                    <div class="flex flex-col items-center gap-y-2 md:flex-row"><a class="hover:text-cyan-400"
+                            href="/demo/astro-boilerplate">
+                            <div class="text-xl font-semibold">Hotel Booking</div>
+                        </a>
+                        <div class="ml-3 flex gap-2">
+                            <div class="rounded-md px-2 py-1 text-xs font-semibold bg-violet-400 text-violet-900">
+                                Laravel</div>
+                            <div class="rounded-md px-2 py-1 text-xs font-semibold bg-emerald-400 text-emerald-900">
+                                Livewire
+                            </div>
+                            <div class="rounded-md px-2 py-1 text-xs font-semibold bg-yellow-400 text-yellow-900">
+                                Bootsrap 5</div>
+                        </div>
+                    </div>
+                    <p class="mt-3 text-gray-400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+                        bibendum. Nunc non posuere consectetur, justo erat semper enim, non
+                        hendrerit dui odio id enim.</p>
+                </div>
+            </div>
+            <div class="flex flex-col items-center gap-x-8 rounded-md bg-slate-800 p-3 md:flex-row">
+                <div class="shrink-0"><a href="/demo/astro-boilerplate"><img class="h-36 w-36 hover:translate-y-1"
+                            src="assets/img/image2.png" alt="Project Maps" loading="lazy"></a></div>
+                <div>
+                    <div class="flex flex-col items-center gap-y-2 md:flex-row"><a class="hover:text-cyan-400"
+                            href="/demo/astro-boilerplate">
+                            <div class="text-xl font-semibold">Online Psychometric Test</div>
+                        </a>
+                        <div class="ml-3 flex gap-2">
+                            <div class="rounded-md px-2 py-1 text-xs font-semibold bg-fuchsia-400 text-fuchsia-900">
+                                Laravel</div>
+                            <div class="rounded-md px-2 py-1 text-xs font-semibold bg-indigo-400 text-indigo-900">
+                                Livewire</div>
+                            <div class="rounded-md px-2 py-1 text-xs font-semibold bg-rose-400 text-rose-900">Bootsrap
+                            </div>
+                        </div>
+                    </div>
+                    <p class="mt-3 text-gray-400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+                        bibendum. Nunc non posuere consectetur, justo erat semper enim, non
+                        hendrerit dui odio id enim.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mx-auto max-w-screen-lg px-3 py-6">
+        <div class="mb-6 text-2xl font-bold">
+            <div class="flex items-baseline justify-between">
+                <div>Recent <span
+                        class="bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text text-transparent">Posts</span>
+                </div>
+                <div class="text-sm"><a href="/demo/astro-boilerplate/posts">View all Posts →</a></div>
+            </div>
+        </div>
+        <div class="grid grid-cols-1 gap-6 md:grid-cols-3"><a class="hover:translate-y-1"
+                href="/demo/astro-boilerplate/posts/sixth-post">
+                <div class="overflow-hidden rounded-md bg-slate-800">
+                    <div class="aspect-w-3 aspect-h-2"><img class="h-full w-full object-cover object-center"
+                            src="/assets/img/image3.jpeg" alt="Image post" loading="lazy">
+                    </div>
+                    <div class="px-3 pt-4 pb-6 text-center">
+                        <h2 class="text-xl font-semibold">Typography example</h2>
+                        <div class="mt-1 text-xs text-gray-400">Feb 6, 2020</div>
+                        <div class="mt-2 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur vero
+                            esse non molestias eos excepturi.</div>
+                    </div>
+                </div>
+            </a><a class="hover:translate-y-1" href="/demo/astro-boilerplate/posts/fifth-post">
+                <div class="overflow-hidden rounded-md bg-slate-800">
+                    <div class="aspect-w-3 aspect-h-2"><img class="h-full w-full object-cover object-center"
+                            src="/assets/img/image3.jpeg" alt="Image post 2" loading="lazy"></div>
+                    <div class="px-3 pt-4 pb-6 text-center">
+                        <h2 class="text-xl font-semibold">5th Lorem ipsum dolor sit</h2>
+                        <div class="mt-1 text-xs text-gray-400">Feb 5, 2020</div>
+                        <div class="mt-2 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur vero
+                            esse non molestias eos excepturi.</div>
+                    </div>
+                </div>
+            </a><a class="hover:translate-y-1" href="/demo/astro-boilerplate/posts/forth-post">
+                <div class="overflow-hidden rounded-md bg-slate-800">
+                    <div class="aspect-w-3 aspect-h-2"><img class="h-full w-full object-cover object-center"
+                            src="/assets/img/image3.jpeg" alt="Image post 3" loading="lazy"></div>
+                    <div class="px-3 pt-4 pb-6 text-center">
+                        <h2 class="text-xl font-semibold">4th Lorem ipsum dolor sit</h2>
+                        <div class="mt-1 text-xs text-gray-400">Feb 4, 2020</div>
+                        <div class="mt-2 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur vero
+                            esse non molestias eos excepturi.</div>
+                    </div>
+                </div>
+            </a></div>
+    </div>
+    <div class="mx-auto max-w-screen-lg px-3 py-6">
+        <div class="flex flex-col items-center justify-between gap-6 sm:flex-row">
+            <div class="sm:w-7/12">
+                <div class="text-3xl font-bold">Subscribe to my <span
+                        class="bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text text-transparent">Newsletters</span>
+                </div>
+                <p class="mt-3 text-gray-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur vero
+                    esse non molestias eos excepturi, inventore atque cupiditate.</p>
+            </div>
+            <div class="w-full sm:w-5/12">
+                <form
+                    class="flex rounded-full bg-slate-800 px-4 py-2 focus-within:ring-2 focus-within:ring-cyan-600 hover:ring-2 hover:ring-cyan-600">
+                    <input class="w-full appearance-none bg-slate-800 focus:outline-none"><button
+                        class="ml-2 shrink-0 rounded-full bg-gradient-to-br from-sky-500 to-cyan-400 px-3 py-1 text-sm font-medium hover:from-sky-700 hover:to-cyan-600 focus:outline-none focus:ring-2 focus:ring-cyan-600/50"
+                        type="submit">Subscribe</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div class="mx-auto max-w-screen-lg px-3 py-6">
+        <div class="border-t border-gray-600 pt-5">
+            <div class="text-sm text-gray-200">© Copyright <!-- -->2022<!-- --> by <!-- -->Astro boilerplate<!-- -->.
+                Built with ♥ by<!-- --> <a class="text-cyan-400 hover:underline" href="https://creativedesignsguru.com"
+                    target="_blank" rel="noopener noreferrer">CreativeDesignsGuru</a>.</div>
+        </div>
+    </div>
+
+    <scribe-shadow id="crxjs-ext"
+        style="position: fixed; width: 0px; height: 0px; top: 0px; left: 0px; z-index: 2147483647; overflow: visible; visibility: visible;"></scribe-shadow>
+</body>
+
 </html>
