--- a/index.html
+++ b/index.html
@@ -50,26 +50,26 @@
 
                 <h2 class="text-xl font-bold mt-3">Super Tools:</h2>
                 <div class="mt-3 flex gap-2 text-normal font-semibold">
-
+                    <span class="my-auto me-2">Backend: </span>
                     <span class="rounded-md px-2 py-1  bg-red-700 text-orange-100">Laravel</span>
-                    <span class="rounded-md px-2 py-1 bg-lime-400 text-lime-900">Livewire</span>
-                    <span class="rounded-md px-2 py-1 bg-lime-400 text-lime-900">Filament</span>
-                    <span class="rounded-md px-2 py-1 bg-lime-400 text-lime-900">Tailwindcss</span>
+                    <span class="rounded-md px-2 py-1 bg-orange-600 text-orange-300">Filament</span>
+                    <span class="rounded-md px-2 py-1 bg-gray-400 text-gray-900">Express</span>
+                    <span class="rounded-md px-2 py-1 bg-orange-400 text-orange-900">MySql</span>
+                    <span class="rounded-md px-2 py-1 bg-rose-400 text-rose-900">Nginx</span>
+                    <span class="rounded-md px-2 py-1 bg-blue-400 text-blue-900">Docker</span>
+
+                </div>
+
+                <div class="mt-3 flex gap-2 text-normal font-semibold">
+                    <span class="my-auto me-2">Frontend: </span>
+                    <span class="rounded-md px-2 py-1 bg-pink-400 text-pink-900">Livewire</span>
+                    <span class="rounded-md px-2 py-1 bg-indigo-400 text-indigo-900">Inertia + React</span>
+                    <span class="rounded-md px-2 py-1 bg-slate-400 text-slate-900">NextJs</span>
+                    <span class="rounded-md px-2 py-1 bg-blue-400 text-blue-900">Tailwindcss</span>
                     <span class="rounded-md px-2 py-1 bg-lime-400 text-lime-900">Bootsrap</span>
 
                 </div>
 
-                <div class="mt-3 flex gap-2 text-normal font-semibold">
-                    <span class="rounded-md px-2 py-1 bg-lime-400 text-lime-900">Inertia + React</span>
-                    <span class="rounded-md px-2 py-1 bg-gray-400 text-gray-900">NextJs</span>
-                    <span class="rounded-md px-2 py-1 bg-gray-400 text-gray-900">Express</span>
-                </div>
-
-                <div class="mt-3 flex gap-2 text-normal font-semibold">
-                    <span class="rounded-md px-2 py-1 bg-lime-400 text-lime-900">MySql</span>
-                    <span class="rounded-md px-2 py-1 bg-lime-400 text-lime-900">Linux Server + Nginx</span>
-                    <span class="rounded-md px-2 py-1 bg-gray-400 text-gray-900">Docker</span>
-                </div>
 
             </div>
             <div class="shrink-0">
@@ -104,9 +104,10 @@
                             </div>
                         </div>
                     </div>
-                    <p class="mt-3 text-gray-400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                        bibendum. Nunc non posuere consectetur, justo erat semper enim, non
-                        hendrerit dui odio id enim.</p>
+                    <p class="mt-3 text-gray-400">Website-based donation platform with various features such as making
+                        donations online, WhatsApp notifications and donations via QRIS and e-wallet. The donation
+                        platform is also equipped with a complete database system to create donation reports and improve
+                        your CRM.</p>
                 </div>
             </div>
             <div class="flex flex-col items-center gap-x-8 rounded-md bg-slate-800 p-3 md:flex-row">
@@ -127,9 +128,9 @@
                                 Bootsrap 5</div>
                         </div>
                     </div>
-                    <p class="mt-3 text-gray-400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                        bibendum. Nunc non posuere consectetur, justo erat semper enim, non
-                        hendrerit dui odio id enim.</p>
+                    <p class="mt-3 text-gray-400">The application allows admins to add rooms, manage guest scheduling
+                        and book hotels online. Online Booking is equipped with a payment system via a payment gateway
+                        so that guests get a booking number after making a payment..</p>
                 </div>
             </div>
             <div class="flex flex-col items-center gap-x-8 rounded-md bg-slate-800 p-3 md:flex-row">
@@ -149,9 +150,9 @@
                             </div>
                         </div>
                     </div>
-                    <p class="mt-3 text-gray-400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                        bibendum. Nunc non posuere consectetur, justo erat semper enim, non
-                        hendrerit dui odio id enim.</p>
+                    <p class="mt-3 text-gray-400">Psikotest Online allows visitors to take psychological tests online.
+                        There are 2 types of tests, the first is an Intelligence test in the form of multiple choices.
+                        and the accuracy test in the form of a random number selection test..</p>
                 </div>
             </div>
         </div>
@@ -159,66 +160,63 @@
     <div class="mx-auto max-w-screen-lg px-3 py-6">
         <div class="mb-6 text-2xl font-bold">
             <div class="flex items-baseline justify-between">
-                <div>Recent <span
-                        class="bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text text-transparent">Posts</span>
+                <div>My Opesource <span
+                        class="bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text text-transparent">Projects</span>
                 </div>
-                <div class="text-sm"><a href="/demo/astro-boilerplate/posts">View all Posts →</a></div>
+                <!-- <div class="text-sm"><a href="/demo/astro-boilerplate/posts">View all Posts →</a></div> -->
             </div>
         </div>
-        <div class="grid grid-cols-1 gap-6 md:grid-cols-3"><a class="hover:translate-y-1"
-                href="/demo/astro-boilerplate/posts/sixth-post">
+        <div class="grid grid-cols-1 gap-6 md:grid-cols-3">
+            <a class="hover:translate-y-1" href="/demo/astro-boilerplate/posts/sixth-post">
                 <div class="overflow-hidden rounded-md bg-slate-800">
                     <div class="aspect-w-3 aspect-h-2"><img class="h-full w-full object-cover object-center"
                             src="/assets/img/image3.jpeg" alt="Image post" loading="lazy">
                     </div>
                     <div class="px-3 pt-4 pb-6 text-center">
-                        <h2 class="text-xl font-semibold">Typography example</h2>
-                        <div class="mt-1 text-xs text-gray-400">Feb 6, 2020</div>
-                        <div class="mt-2 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur vero
-                            esse non molestias eos excepturi.</div>
+                        <h2 class="text-xl font-semibold">SuperLinks</h2>
+                        <div class="mt-1 text-xs text-gray-400">Link</div>
+                        <div class="mt-2 text-sm">Belajar Online Secara Autodidak. Website khusus kumpulan link youtube
+                            untuk memperpermudah belajar secara online tanpa harus membayar</div>
                     </div>
                 </div>
-            </a><a class="hover:translate-y-1" href="/demo/astro-boilerplate/posts/fifth-post">
+            </a>
+            <a class="hover:translate-y-1" href="/demo/astro-boilerplate/posts/fifth-post">
                 <div class="overflow-hidden rounded-md bg-slate-800">
                     <div class="aspect-w-3 aspect-h-2"><img class="h-full w-full object-cover object-center"
                             src="/assets/img/image3.jpeg" alt="Image post 2" loading="lazy"></div>
                     <div class="px-3 pt-4 pb-6 text-center">
-                        <h2 class="text-xl font-semibold">5th Lorem ipsum dolor sit</h2>
-                        <div class="mt-1 text-xs text-gray-400">Feb 5, 2020</div>
-                        <div class="mt-2 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur vero
-                            esse non molestias eos excepturi.</div>
+                        <h2 class="text-xl font-semibold">Quran Word</h2>
+                        <div class="mt-1 text-xs text-gray-400">Link</div>
+                        <div class="mt-2 text-sm">Kumpulan kata-kata dalam Al-Quran yang sering berulang.</div>
                     </div>
                 </div>
-            </a><a class="hover:translate-y-1" href="/demo/astro-boilerplate/posts/forth-post">
+            </a>
+            <a class="hover:translate-y-1 hidden" href="/demo/astro-boilerplate/posts/forth-post">
                 <div class="overflow-hidden rounded-md bg-slate-800">
                     <div class="aspect-w-3 aspect-h-2"><img class="h-full w-full object-cover object-center"
                             src="/assets/img/image3.jpeg" alt="Image post 3" loading="lazy"></div>
                     <div class="px-3 pt-4 pb-6 text-center">
-                        <h2 class="text-xl font-semibold">4th Lorem ipsum dolor sit</h2>
-                        <div class="mt-1 text-xs text-gray-400">Feb 4, 2020</div>
-                        <div class="mt-2 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur vero
-                            esse non molestias eos excepturi.</div>
+                        <h2 class="text-xl font-semibold">Santren</h2>
+                        <div class="mt-1 text-xs text-gray-400">Link</div>
+                        <div class="mt-2 text-sm">System Pengelolaan Data Santri. Laporan hafalan quran dan hadist yang
+                            dapat dipantau langsung oleh orang tua siswa </div>
                     </div>
                 </div>
-            </a></div>
+            </a>
+        </div>
     </div>
     <div class="mx-auto max-w-screen-lg px-3 py-6">
         <div class="flex flex-col items-center justify-between gap-6 sm:flex-row">
             <div class="sm:w-7/12">
-                <div class="text-3xl font-bold">Subscribe to my <span
-                        class="bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text text-transparent">Newsletters</span>
+                <div class="text-3xl font-bold">Need discuss a project ?
                 </div>
-                <p class="mt-3 text-gray-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur vero
-                    esse non molestias eos excepturi, inventore atque cupiditate.</p>
+                <p class="mt-3 text-gray-300">
+                    I always try to do my best as much as I can. I hope every collaboration can give a good impact for
+                    the future.
+                </p>
+                <p class="mt-3 text-gray-40">Email: herian.sap@gmail.com</p>
             </div>
-            <div class="w-full sm:w-5/12">
-                <form
-                    class="flex rounded-full bg-slate-800 px-4 py-2 focus-within:ring-2 focus-within:ring-cyan-600 hover:ring-2 hover:ring-cyan-600">
-                    <input class="w-full appearance-none bg-slate-800 focus:outline-none"><button
-                        class="ml-2 shrink-0 rounded-full bg-gradient-to-br from-sky-500 to-cyan-400 px-3 py-1 text-sm font-medium hover:from-sky-700 hover:to-cyan-600 focus:outline-none focus:ring-2 focus:ring-cyan-600/50"
-                        type="submit">Subscribe</button>
-                </form>
-            </div>
+
         </div>
     </div>
 
