update super tools

--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
                     <span class="my-auto me-2">Backend: </span>
                     <span class="rounded-md px-2 py-1  bg-red-700 text-orange-100">Laravel</span>
                     <span class="rounded-md px-2 py-1 bg-orange-600 text-orange-300">Filament</span>
-                    <span class="rounded-md px-2 py-1 bg-gray-400 text-gray-900">Express</span>
+                    <span class="rounded-md px-2 py-1 bg-gray-400 text-gray-900">ExpressJs</span>
                     <span class="rounded-md px-2 py-1 bg-orange-400 text-orange-900">MySql</span>
                     <span class="rounded-md px-2 py-1 bg-rose-400 text-rose-900">Nginx</span>
                     <span class="rounded-md px-2 py-1 bg-blue-400 text-blue-900">Docker</span>
+                    <span class="rounded-md px-2 py-1 bg-blue-400 text-blue-900">VPS</span>
+                    <span class="rounded-md px-2 py-1 bg-gray-400 text-gray-900">Coolify</span>
+                    <span class="rounded-md px-2 py-1 bg-orange-400 text-orange-900">WHM/Cpanel</span>
 
                 </div>
 
@@ -78,7 +81,7 @@
 
             </div>
             <div class="shrink-0">
-                <img class="h-64 w-64" src="assets/img/image1.jpg" alt="Avatar image" loading="lazy">
+                <img class="h-64 w-64" src="/assets/img/image1.jpg" alt="Avatar image" loading="lazy">
             </div>
         </div>
     </div>
@@ -162,7 +165,7 @@
             </div>
         </div>
     </div>
-    <div class="mx-auto max-w-screen-lg px-3 py-6">
+    <div class="mx-auto max-w-screen-lg px-3 py-6 hidden">
         <div class="mb-6 text-2xl font-bold">
             <div class="flex items-baseline justify-between">
                 <div>My Opesource <span
